--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,3 +16,16 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+            gedmo_loggable:
+                type: annotation
+                prefix: Gedmo\Loggable\Entity
+                dir: "%kernel.root_dir%/../src/Entity/"
+                alias: GedmoLoggable
+                is_bundle: false
+
+stof_doctrine_extensions:
+    class:
+        loggable: ActivityLogBundle\Listener\LoggableListener
+    orm:
+        default:
+            loggable: true
