--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "madmis/activity-log-bundle": "^0.2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^6.2",
+        "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/asset": "4.4.*",
         "symfony/config": "4.4.*",
         "symfony/console": "4.4.*",
